# GLSL-Raytracer

./: .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  debug  main  tags
res/shaders/: vertexShader.vs.glsl
shaders/: \  comp.glsl  frag.glsl  vert.glsl
src/: #main.cpp#  app.h  errorLogger.h  glad.c  main.cpp  programs.h  rayTracer.cpp  render.cpp  shader.cpp  shader.h
